# mqtt-test

./: .gitignore  README.md  agent.md  docker-compose.yml
android/: settings.gradle.kts
android-chat/: settings.gradle.kts
android-chat/app/: build.gradle.kts
android-chat/app/src/main/: AndroidManifest.xml
android-chat/app/src/main/aidl/com/mqttai/mdm/: IMdmChatCallback.aidl  IMdmService.aidl
android-chat/app/src/main/cpp/: CMakeLists.txt  llm_bridge.cpp
android-chat/app/src/main/java/com/mqttai/chat/: ChatViewModel.kt  MainActivity.kt  MdmServiceConnection.kt
android-chat/app/src/main/java/com/mqttai/chat/tools/: CalculateTool.kt  LlamaInference.kt  LocalRouter.kt  YouTubeTool.kt
android-chat/app/src/main/res/values/: themes.xml
android-mdm/: settings.gradle.kts
android-mdm/app/: build.gradle.kts
android-mdm/app/src/main/: AndroidManifest.xml
android-mdm/app/src/main/java/com/mqttai/mdm/: MdmLauncherActivity.kt  MdmService.kt  MqttManager.kt
android-mdm/app/src/main/java/com/mqttai/mdm/tools/: AlertTool.kt  AppManagerTool.kt  BluetoothTool.kt  BrightnessTool.kt  DeviceInfoTool.kt  LocationTool.kt  PowerTool.kt  ScreenTool.kt  ScreenshotTool.kt  VolumeTool.kt  WifiTool.kt
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: llm_bridge.cpp
android/app/src/main/java/com/mqttai/calc/: CalcViewModel.kt  MainActivity.kt  MqttAiClient.kt
android/app/src/main/res/values/: themes.xml
server/: .env.example  Dockerfile  index.ts  package-lock.json  package.json  yt-search.d.ts
(+5 files in other folders)
